--- a/src/components/servicios/services.module.css
+++ b/src/components/servicios/services.module.css
@@ -19,7 +19,13 @@
   padding-bottom: 3%;
   overflow-y: scroll;
 }
-
+.filter {
+  text-align: start;
+  margin-block: 5%;
+}
+.filter select {
+  border-radius: 5px;
+}
 
 .serviceDetail {
   display: flex;
@@ -111,50 +117,8 @@
   transform: rotate(45deg);
 }
 
-.totalContain {
-  width: 40%;
-  background-color: #99c1b9;
-  margin-left: 2%;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 2%;
+.horario{
+  width: 60%;
+  height:80vh;
 }
 
-.ticket {
-  background-color: white;
-  width: 70%;
-  height: 50%;
-  text-align: center;
-  border-radius: 8px;
-  overflow-y: scroll;
-}
-
-.detailTicket {
-  display: flex;
-  justify-content: space-between;
-  padding-inline: 5%;
-  padding-block: 1%;
-  border-top: solid black 1px;
-}
-
-.TicketTotal {
-  display: flex;
-  justify-content: space-between;
-  padding-inline: 5%;
-  text-align: right;
-  border-top: solid black 3px;
-  border-style: dashed;
-}
-.TicketButton {
-  width: 70%;
-  padding: 1%;
-  margin-top: 5%;
-  border-radius: 10px;
-  background-color: #d88c9a;
-  border-color: #d88c9a;
-}
-.TicketButton:hover {
-  cursor: pointer;
-}
